--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
+    "chart.js": "^2.9.4",
+    "ng2-charts": "^2.4.2",
     "ngx-pagination": "^5.0.0",
     "rxjs": "~6.6.0",
     "sweetalert2": "^10.12.0",
